src/objects/Pricing__c.object
<CustomObject>
    <fields>
        <fullName>AOV_Range__c</fullName>
        <label>AOV Range</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 - 125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125 - 300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 300</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AOV__c</fullName>
        <label>AOV</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GMV__c</fullName>
        <formula>Max_Base_AOV__c *  Order_Max__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incr_Fee__c</fullName>
        <label>Incr Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incr_Price_Per_Order__c</fullName>
        <formula>IF(  Tier__c = &quot;Standard&quot; || Tier__c = &quot;Plus&quot;,0,Incr_Fee__c * 12/ Order_Increment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incr Price Per Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Base_AOV__c</fullName>
        <label>Max Base AOV</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Base_AOV__c</fullName>
        <label>Min Base AOV</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Take_Rate__c</fullName>
        <formula>Target_Take_Rate__c *0.8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Take Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Price__c</fullName>
        <label>Minimum Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Increment__c</fullName>
        <label>Order Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Max__c</fullName>
        <label>Order Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_per_Order__c</fullName>
        <formula>Target_Price__c *12/ Order_Max__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Price__c</fullName>
        <label>Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Take_Rate__c</fullName>
        <label>Target Take Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_Value__c</fullName>
        <formula>IF(NOT ISBLANK(Tier__c), VALUE( TRIM(SUBSTITUTE( Tier__c , &apos;T&apos;,&apos;&apos;)) ) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AOV__c</columns>
        <columns>Max_Base_AOV__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Tier__c</columns>
        <columns>Order_Max__c</columns>
        <columns>Minimum_Price__c</columns>
        <columns>Target_Price__c</columns>
        <columns>Incr_Fee__c</columns>
        <columns>Order_Increment__c</columns>
        <columns>Price_per_Order__c</columns>
        <columns>Incr_Price_Per_Order__c</columns>
        <columns>Min_Take_Rate__c</columns>
        <columns>Target_Take_Rate__c</columns>
        <columns>GMV__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>